--- a/README
+++ b/README
@@ -1,8 +1,8 @@
 知乎专栏:
-
+[专栏](https://zhuanlan.zhihu.com/p/75205174 "对应文章")
 
 demo列表:
-[3d 散点图 三个点](https://ahaoboy.github.io/echarts/demo/3d/3d 散点图 三个点)
-[3d 散点图 rgb颜色空间](https://ahaoboy.github.io/echarts/demo/3d/3d 散点图 rgb颜色空间)
+[3d 散点图 三个点](https://ahaoboy.github.io/echarts/demo/3d/3d%20%E6%95%A3%E7%82%B9%E5%9B%BE%20%E4%B8%89%E4%B8%AA%E7%82%B9 "三个点")
+[3d 散点图 rgb颜色空间](https://ahaoboy.github.io/echarts/demo/3d/3d%20%E6%95%A3%E7%82%B9%E5%9B%BE%20rgb%E9%A2%9C%E8%89%B2%E7%A9%BA%E9%97%B4 "rgb颜色空间")
 
 
